fix: add new endpoint

--- a/indexx.html
+++ b/indexx.html
@@ -40,7 +40,7 @@
   <div id="messages"></div>
   <form id="uploadForm"><input type="file" id="fileInput" multiple /><button type="submit">Send</button></form>
   <script>
-    const host = "https://peer1.pythonanywhere.com";
+    const host = "https://gateway-seven-theta.vercel.app";
     function addMsg(url) {
       const ext = url.split('.').pop().toLowerCase();
       const msg = document.createElement('div');
