feat: add new port

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   </div>
 
   <script>
-    const host = "https://peer1.pythonanywhere.com";
+    const host = "https://gateway-seven-theta.vercel.app";
     const usernameModal = document.getElementById('usernameModal');
     const usernameModalInput = document.getElementById('usernameModalInput');
     const usernameModalSubmitBtn = document.getElementById('usernameModalSubmitBtn');
