--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Peer chat</title>
+  <meta name="keywords" content="anon chat, анонимный чат">
+  <meta name="description" content="Peer - anon p2p chat use files">
+  <meta property="og:image" content="img/photo.jpg">
   <meta property="og:title" content="Peer free chat">
   <meta property="og:description" content="free chat">
   <meta property="og:type" content="website">
